--- a/index.html
+++ b/index.html
@@ -2,30 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>DOM</title>
-    
+    <title>Task 1</title>
+
 </head>
 <body>
-<section class="container mt-5">
-    <h1 id="h1ID">What is BOM & What is DOM</h1>
-    <h1 class="h1Class">What is BOM & What is DOM</h1>
-    <h2 id="h2ID">What really JS DO?</h2>
-    <h2 class="h1Class">What really JS DO?</h2>
-    <hr>
-    <input class="form-control" type="text" name="cusName">
-    <button class="btn btn-danger mt-3">Test</button>
+
+<section class="container mt-3">
+    <section class="row">
+
+        <!--case One-->
+        <div class="col">
+            <h1>Hello There How are you.?</h1>
+            <input id="txt" class="form-control" type="text" placeholder="Input Something">
+            <button id="btn1" class="mt-2 btn btn-danger">Change Text</button>
+        </div>
+
+        <!--case Two-->
+        <div class="col">
+            <h1>Input an Image Url</h1>
+            <input id="url" class="form-control" type="url" placeholder="Input Image URL">
+            <div id="img" style="height: 50vh" class="mt-2 border shadow"></div>
+            <button id="btn2" class="mt-2 btn btn-danger">Change Image</button>
+        </div>
+    </section>
 </section>
 
-
 <script>
-    document.querySelector("h1").addEventListener("click",function(){
-        document.querySelector(".h1Class").remove();
+    document.getElementById("txt").addEventListener("keyup", function(event) {
+        document.querySelector('h1').innerText=(document.querySelector("#txt").value);
     });
 
-    document.querySelector("button").addEventListener("click",function(){
-        document.querySelector("#h2ID").innerText = (document.querySelector("input").value)
+    document.querySelector("#btn1").addEventListener("click",function(){
+        document.querySelector('h1').style.color='Red';
     });
-
 </script>
 </body>
 </html>
